# north-framework

./: .gitignore  .rusty-hook.toml  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  benchmark.yml  cliff.toml  rustfmt.toml  setup.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: rust.yml
crates/north/: Cargo.toml  README.md
crates/north-common/: Cargo.toml  README.md
crates/north-common/src/: error.rs  lib.rs  prelude.rs  state.rs
crates/north-common/src/discovery/: discovery_client.rs  discovery_options.rs  heartbeat.rs
crates/north-common/src/loadbalancer/: service_pool.rs
crates/north-common/src/macros/: server.rs
crates/north-common/src/registry/: default_service_instance.rs  mod.rs  service_instance.rs  service_instance_state.rs  service_status_constants.rs
crates/north-common/src/utils/: logger_utils.rs  mod.rs  serde_utils.rs
crates/north-config/: Cargo.toml  README.md
crates/north-config/src/: config_source.rs  error.rs  lib.rs  serde_utils.rs  utils.rs  watcher.rs
crates/north-consul/: Cargo.toml  README.md
crates/north-consul/src/: agent.rs  catalog.rs  connect_ca.rs  errors.rs  health.rs  kv.rs  lib.rs  request.rs  session.rs
crates/north-consul/tests/: catalog.rs  health.rs  kv.rs  session.rs
crates/north-derives/: Cargo.toml  README.md
crates/north-derives/src/: lib.rs
crates/north-service/: Cargo.toml  README.md
crates/north-service/src/: lib.rs
crates/north-service/src/clients/: base_client.rs  mod.rs
crates/north-service/src/clients/consul/: mod.rs  prelude.rs
crates/north-service/src/clients/consul/discovery/: consul_discovery.rs  mod.rs
crates/north-service/src/clients/consul/registry/: consul_registration.rs  consul_registration_builder.rs  consul_service_registry.rs  mod.rs
crates/north-service/src/clients/mdns/: mdns_client.rs  mdns_service_registry.rs  prelude.rs
crates/north/src/: addr.rs  contracts.rs  error.rs  helper.rs  lib.rs  north.rs  prelude.rs  router.rs  server.rs  service.rs
crates/north/src/clients/consul/: consul_client.rs  prelude.rs
crates/north/src/clients/consul/discovery/: consul_discovery.rs
crates/north/src/clients/mdns/: mdns_registration.rs  mdns_registration_builder.rs  mod.rs  prelude.rs
crates/north/src/discovery/: discovery_client.rs  discovery_options.rs  mod.rs
crates/north/src/loadbalancer/: base_strategy.rs  mod.rs
crates/north/src/registry/: registration.rs  service_instance_state.rs  service_registry.rs  service_registry_builder.rs  service_status_constants.rs
crates/north/src/server/: error.rs  mod.rs  north.rs  service.rs
crates/north/src/utils/: boxed_connection.rs  logger_utils.rs  mod.rs  serde_utils.rs  server_utils.rs
crates/north/src/web/: addrs.rs  mod.rs
docs/: INDEX.md
examples/: Cargo.toml
examples/basic/: Cargo.toml  README.md
examples/basic/src/: main.rs  routes.rs
examples/configs/: bootstrap.debug.yaml  bootstrap.release.yaml  test.debug.json  test.debug.toml  test.debug.yaml  test.release.json  test.release.ron  test.release.toml  test.release.yaml
