[package]
name = "north-common"
version = "0.0.2"
edition = "2021"
description = "Common logic used in North Microservice Framework"
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/north/"
homepage = "https://github.com/juicycleff/north-common"
repository = "https://github.com/juicycleff/north-common"
keywords = ["http", "web", "framework", "async", "microservice"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming::http-server",
    "web-programming::websocket",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
log = "0.4.14"
log4rs = "1"
yansi = "0.5.1"
chrono = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"

[dev-dependencies]
rstest = "0.13"
