[package]
name = "north-common"
version = "0.0.2"
edition = "2021"
description = "Common logic used in North Microservice Framework"
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/north/"
homepage = "https://github.com/juicycleff/north-common"
repository = "https://github.com/juicycleff/north-common"
keywords = ["http", "web", "framework", "async", "microservice"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming::http-server",
    "web-programming::websocket",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
yansi = { workspace = true }
chrono = { workspace = true }
syn = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
