[package]
name = "north-config"
version = "0.1.0"
edition = "2021"
authors = ["rex.raphael@outlook.com"]
description = "North config is a multi source configuration crate designed as part of the North Microservice Framework"
categories = ["config", "env", "nested-config"]

[features]
yaml = ["serde_yaml"]
default = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
log = "0.4.14"
dotenvy = "0.15"
econf = "0.2.1"
json_dotpath = "1.1"
convert_case = "0.5"

tokio = { version = "1.18", optional = true, features = ["fs", "io-util"] }
async-std = { version = "1.12", optional = true }

serde_yaml = { version = "0.8", optional = true }
ron = { version ="0.8", optional = true }
toml = { version ="0.5", optional = true }

