[package]
name = "north-derives"
version = "0.1.1"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="1.0", features=["full","fold"]}
quote = "1.0.8"
poem = { workspace = true }

north-common = { version = "0.0.3" }