[package]
name = "north-derives"
version = "0.1.1"
edition = "2021"
authors = ["Rex Raphael <rex.raphael@outlook.com>"]
description = "North config is a multi source configuration crate designed as part of the North Microservice Framework"
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/north-config/"
homepage = "https://github.com/juicycleff/north-framework"
repository = "https://github.com/juicycleff/north-framework"
keywords = ["async", "config", "env", "env-parser", "json"]
categories = [
    "config",
    "asynchronous",
]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="1.0", features=["full","fold"]}
quote = "1.0.8"
poem = { workspace = true }

north-common = { version = "0.0.3" }