[package]
name = "north-service"
version.workspace = true
edition = "2021"
authors = ["Rex Raphael <rex.raphael@outlook.com>"]
description = "Service discovery and registry for North Microservice Framework"
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/north/"
homepage = "https://github.com/juicycleff/north-service"
repository = "https://github.com/juicycleff/north-service"
keywords = ["http", "web", "framework", "async", "microservice"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming::http-server",
    "web-programming::websocket",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
registry-consul = ["north-consul"]
registry-local = ["async-zeroconf"]
default = []

[dependencies]
async-trait = "0.1"
log = "0.4.14"
nanoid = "0.4"
north-common = "0.0.1"

# Optional deps
async-zeroconf = { version ="0.2", optional = true }
north-consul = { version = "0", optional = true }