[package]
name = "north"
version = "0.0.1"
edition = "2021"
authors = ["Rex Raphael <rex.raphael@outlook.com>"]
description = "North config is a multi source configuration crate designed as part of the North Microservice Framework"
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/north/"
homepage = "https://github.com/juicycleff/north-framework"
repository = "https://github.com/juicycleff/north-framework"
keywords = ["http", "web", "framework", "async", "microservice"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming::http-server",
    "web-programming::websocket",
    "microservice",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
config = ["ron", "toml"]
registry-consul = ["consul"]
registry-local = ["async-zeroconf"]
api-poem = ["poem", "poem-openapi"]
db-arango = ["aragog"]
db-sql = []
default = ["api-poem", "config", "db-arango"]

[dependencies]
async-trait = "0.1"
tokio = { version = "1.18", features = ["full"] }
tokio-retry = "0.3"
futures-retry = "0.6"
futures = "0.3"
log = "0.4.14"
log4rs = "1"
yansi = "0.5.1"
derive_more = "0.99.17"
rayon = "1.5"
clone_all = "0.1.1"
chrono = "0.4"
nanoid = "0.4"
econf = "0.2.1"
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
ron = { version ="0.7", optional = true }
toml = { version ="0.5", optional = true }

# Optional deps
async-zeroconf = { version ="0.2", optional = true }

consul = { git = "https://github.com/juicycleff/consul-rust", branch = "master", optional = true }
#consul = { path = "../../../consul-rust", optional = true }

poem = {version = "1.3", optional = true, features = ["sse", "compression", "cookie", "embed", "opentelemetry", "tokio-metrics", "tower-compat", "websocket", "acme", "redis-session", "prometheus", "rustls"] }
poem-openapi = { version = "2.0.8", features = ["swagger-ui"], optional = true }

# Database
aragog = { version = "0.17", optional = true }
#sea-orm = { version = "0.9.1", optional = true, features = [
#    "debug-print",
#    "runtime-tokio-native-tls",
#    "sqlx-sqlite",
#    # "sqlx-postgres",
#    # "sqlx-mysql",
#] }

[dev-dependencies]
mockall = "0.11"
rstest = "0.13"
rusty-hook = "^0.11"

#[dev-dependencies.cargo-husky]
#version = "1"
#default-features = false
#features = ["prepush-hook", "run-for-all", "precommit-hook", "postmerge-hook", "run-cargo-clippy", "run-cargo-fmt"]