[package]
name = "north"
version = "0.1.1"
edition = "2021"
authors = ["Rex Raphael <rex.raphael@outlook.com>"]
description = "North Microservice Framework"
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/north/"
homepage = "https://github.com/juicycleff/north-framework"
repository = "https://github.com/juicycleff/north-framework"
keywords = ["http", "web", "framework", "async", "microservice"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming::http-server",
    "web-programming::websocket",
]

[features]
api-poem = ["poem", "poem-openapi"]
db-arango = ["aragog"]
db-sql = []
default = ["api-poem", "db-arango"]

[dependencies]
async-trait = "0.1"
tokio = { version = "1.18", features = ["full"] }
futures = "0.3"
yansi = "0.5.1"
derive_more = "0.99"
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"

north-common = "0.0.1"

poem = {version = "1.3", optional = true, features = ["sse", "compression", "cookie", "embed", "opentelemetry", "tokio-metrics", "tower-compat", "websocket", "acme", "redis-session", "prometheus", "rustls"] }
poem-openapi = { version = "2.0.8", features = ["swagger-ui"], optional = true }

# Database
aragog = { version = "0.17", optional = true }
#sea-orm = { version = "0.9.1", optional = true, features = [
#    "debug-print",
#    "runtime-tokio-native-tls",
#    "sqlx-sqlite",
#    # "sqlx-postgres",
#    # "sqlx-mysql",
#] }

[dev-dependencies]
mockall = "0.11"
rstest = "0.13"
rusty-hook = "^0.11"

#[dev-dependencies.cargo-husky]
#version = "1"
#default-features = false
#features = ["prepush-hook", "run-for-all", "precommit-hook", "postmerge-hook", "run-cargo-clippy", "run-cargo-fmt"]