[package]
name = "north"
workspace.version = true
edition = "2021"
authors = ["Rex Raphael <rex.raphael@outlook.com>"]
description = "North Microservice Framework"
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/north/"
homepage = "https://github.com/juicycleff/north-framework"
repository = "https://github.com/juicycleff/north-framework"
keywords = ["http", "web", "framework", "async", "microservice"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming::http-server",
    "web-programming::websocket",
]

[features]
api-native = ["hyper"]
api-poem = ["poem", "poem-openapi"]
db-arango = ["aragog"]
db-sql = []
default = ["api-poem"]

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
yansi = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
tuple = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

north-common = { version = "0.0.3" }
north-derives = { version = "0.1.2" }

hyper = { version = "0.14", optional = true }
poem = { version = "1.3.57", optional = true, features = ["sse", "compression", "cookie", "embed", "opentelemetry", "tokio-metrics", "tower-compat", "websocket", "acme", "redis-session", "prometheus", "rustls"] }
poem-openapi = { version = "3.0.0", features = ["swagger-ui"], optional = true }

# Database
aragog = { version = "0.17", optional = true }

[dev-dependencies]
mockall = { workspace = true }
rstest = { workspace = true }
rusty-hook = { workspace = true }

#[dev-dependencies.cargo-husky]
#version = "1"
#default-features = false
#features = ["prepush-hook", "run-for-all", "precommit-hook", "postmerge-hook", "run-cargo-clippy", "run-cargo-fmt"]


[patch.crates-io]
aragog = {  git = "https://gitlab.com/juicycleff/aragog", branch = "master" }