[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18", features = ["full"] }
poem-openapi = { version = "2.0.8", features = ["swagger-ui"] }
north = { path = "../../crates/north" }