[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18", features = ["full"] }
poem-openapi = { version = "3.0.0", features = ["swagger-ui"] }
north = { path = "../../crates/north", features = ["api-poem"] }
north-config = { path = "../../crates/north-config", features = ["yaml", "tokio"], default-features = true }
serde = "1.0.194"